welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value vide
vide=false
^BDRBuggle:4: error: not found: value vide
while(vide==false){
      ^BDRBuggle:37: error: not found: value vide
		vide = true
                ^